--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,34 @@
 @import "tailwindcss";
 @plugin "daisyui";
+@plugin "@tailwindcss/typography";
+
+/* We have to define the background color for code blocks manually because daisy ui interferes with the styling */
+:root {
+  --tokyonight-bg-color: #1a1b26;
+  --tokyonight-fg-color: #c0caf5;
+}
+
+article {
+  @apply prose;
+}
+
+
+pre {
+  border: 1px solid var(--tokyonight-bg-color);
+  border-radius: 12px;
+  padding: 0;
+}
+
+pre code {
+  background-color: var(--tokyonight-bg-color);
+  padding: 12px;
+  border: 1px solid var(--tokyonight-bg-color);
+  border-radius: 12px;
+  margin: 0 !important;
+}
+
+p code, li code {
+  color: var(--tokyonight-fg-color);
+  background-color: var(--tokyonight-bg-color);
+}
 
